# LoggerSystem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DAY_4_COMPLETE.md  MANIFEST.in  README.md  demo_day4.py  project_tree.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: 100_PERCENT_COMPLETE.md  CROSS_PLATFORM.md  DAY_20_SUMMARY.md  DAY_4_SUMMARY.md  FINAL_RELEASE_SUMMARY.md  PERFORMANCE_ANALYSIS.md  RELEASE_CHECKLIST.md  TEST_COVERAGE_SUMMARY.md  api.md  logger_action_plan.md  logger_architecture_diagram.md  logger_class_diagram.md  logger_class_diagram.mermaid  logger_quick_checklist.md  quickstart.md  user_guide.md
examples/: advanced_patterns.py  async_usage.py  basic_usage.py  basic_usage_day4.py  callable_handler_usage.py  colorizer_usage.py  compression_retention_usage.py  context_binding.py  context_binding_usage.py  custom_handler.py  decorators_usage.py  exception_formatting_usage.py  exception_handling.py  file_handler_usage.py  file_rotation.py  file_rotation_usage.py  filter_usage.py  formatter_usage_day6.py  handler_usage_day5.py  multi_handler.py  stream_handler_usage.py
mylogger/: __init__.py  async_handler.py  bound_logger.py  compression.py  constants.py  context.py  context_manager.py  exception_formatter.py  exceptions.py  filter.py  formatter.py  handler.py  level.py  logger.py  record.py  retention.py  rotation.py  utils.py
scripts/: main.py  my_file.py
tests/: conftest.py  test_async.py  test_basic_logger.py  test_callable_handler.py  test_colorizer.py  test_compression.py  test_context_binding.py  test_decorators.py  (+14 more)
